Fixing images not appearing

--- a/NYT Best Sellers - Trend Analysis.ipynb
+++ b/NYT Best Sellers - Trend Analysis.ipynb
@@ -71,7 +71,7 @@
     "\n",
     "A few more information appear on the data obtained from the NYT, such as a \"dagger\" columns that marks if an entry has made the list in suspicious ways such as bulk purchases. However, for this project we will not worry about this and consider everything on the list.\n",
     "\n",
-    "[<img src=\"images/poweredby_nytimes_150c.PNG\">](https://developer.nytimes.com)"
+    "[<img src=\"images/poweredby_nytimes_150c.png\">](https://developer.nytimes.com)"
    ]
   },
   {
@@ -935,7 +935,7 @@
     "\n",
     "*Click the image to redirect to Tableau Public*\n",
     "\n",
-    "[<img src=\"images/fiction_nonfiction.PNG\">](https://public.tableau.com/app/profile/michael2724/viz/NYTBestSellersGenreTrends/NYTBestSellersTrendsofPopularGenresTop5)\n"
+    "[<img src=\"images/Fiction_Nonfiction.PNG\">](https://public.tableau.com/app/profile/michael2724/viz/NYTBestSellersGenreTrends/NYTBestSellersTrendsofPopularGenresTop5)\n"
    ]
   },
   {
